// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card/> renders the <Card/> with populated data 1`] = `
<div
  class="card__Group-sc-s87lnr-2 kLtWKB"
>
  <div
    class="card__Container-sc-s87lnr-1 jcrMsy"
  >
    <p
      class="card__Title-sc-s87lnr-0 jxzPAO"
    >
      Documentaries
    </p>
    <div
      class="card__Entities-sc-s87lnr-5 hcTIAR"
    >
      <div
        class="card__Item-sc-s87lnr-8 kUVnHb"
      >
        <img
          class="card__Image-sc-s87lnr-7 fgaKrF"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__Meta-sc-s87lnr-6 jJsrlN"
        >
          <p
            class="card__SubTitle-sc-s87lnr-3 jIVaFa"
          >
            Tiger King
          </p>
          <p
            class="card__Text-sc-s87lnr-4 fOFPzf"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card__Container-sc-s87lnr-1 jcrMsy"
  >
    <p
      class="card__Title-sc-s87lnr-0 jxzPAO"
    >
      Feel Good
    </p>
    <div
      class="card__Entities-sc-s87lnr-5 hcTIAR"
    >
      <div
        class="card__Item-sc-s87lnr-8 kUVnHb"
      >
        <img
          class="card__Image-sc-s87lnr-7 fgaKrF"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="card__Meta-sc-s87lnr-6 jJsrlN"
        >
          <p
            class="card__SubTitle-sc-s87lnr-3 jIVaFa"
          >
            Juno
          </p>
          <p
            class="card__Text-sc-s87lnr-4 fOFPzf"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the <Card/>  and toggles the card feature 1`] = `
<div
  class="card__Group-sc-s87lnr-2 kLtWKB"
>
  <div
    class="card__Container-sc-s87lnr-1 jcrMsy"
  >
    <p
      class="card__Title-sc-s87lnr-0 jxzPAO"
    >
      Documentaries
    </p>
    <div
      class="card__Entities-sc-s87lnr-5 hcTIAR"
    >
      <div
        class="card__Item-sc-s87lnr-8 kUVnHb"
        data-testid="tiger-king-item-feature"
      >
        <img
          class="card__Image-sc-s87lnr-7 fgaKrF"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__Meta-sc-s87lnr-6 jJsrlN"
        >
          <p
            class="card__SubTitle-sc-s87lnr-3 jIVaFa"
          >
            Tiger King
          </p>
          <p
            class="card__Text-sc-s87lnr-4 fOFPzf"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card__Container-sc-s87lnr-1 jcrMsy"
  >
    <p
      class="card__Title-sc-s87lnr-0 jxzPAO"
    >
      Feel Good
    </p>
    <div
      class="card__Entities-sc-s87lnr-5 hcTIAR"
    >
      <div
        class="card__Item-sc-s87lnr-8 kUVnHb"
        data-testid="juno-item-feature"
      >
        <img
          class="card__Image-sc-s87lnr-7 fgaKrF"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="card__Meta-sc-s87lnr-6 jJsrlN"
        >
          <p
            class="card__SubTitle-sc-s87lnr-3 jIVaFa"
          >
            Juno
          </p>
          <p
            class="card__Text-sc-s87lnr-4 fOFPzf"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
